--- a/pages/page-2/index.html
+++ b/pages/page-2/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/images/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vue3 MPA Page 2</title>
+    <title>Page 2</title>
   </head>
   <body>
     <div id="app"></div>
