--- a/pages/index.html
+++ b/pages/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/images/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homepage</title>
+    <title>Vuelti - homepage</title>
   </head>
   <body>
     <div id="app"></div>
